# GNSSReader

./: GNSS SDR READER API.docx  README.txt  TODO.txt
GnssLib/: Test.cpp
GnssLib/include/: ChunkBuffer.h  DecStream.h  GnssReader.h
GnssLib/include/GnssMetadata/: Frequency.h
GnssMetadata/: .gitignore  GnssMetadata.sln
GnssMetadata/GnssMetadata/: GnssMetadata.vcxproj  GnssMetadata.vcxproj.filters
GnssMetadata/GnssMetadata/Debug/: CL.read.1.tlog  CL.write.1.tlog  GnssMetadata.lastbuildstate  GnssMetadata_manifest.rc  cl.command.1.tlog  mt.command.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
GnssMetadata/doc/: GNSS Metadata Object Model_140914.pptx
GnssMetadata/include/GnssMetadata/: AttributedObject.h  Comment.h  Date.h  File.h
GnssMetadata/lib/GnssMetadata/: Block.cpp  Chunk.cpp  Frequency.cpp  Metadata.cpp  Source.cpp
GnssMetadata/tools/: GnssMetadataToXhtml.xslt  W3C XML Schema (XSD) Validation online.url
GnssReader/: AUTHORS.txt  CMakeLists.txt  GNSSReader.sln  GnssReader.vcxproj  GnssReader.vcxproj.filters  Makefile  Makefile_old~  Makefile~  Output-Debug.txt  TestApp  buildInst.txt
GnssReader/Debug/: CL.read.1.tlog  CL.write.1.tlog  GnssReader.exp  GnssReader.ilk  IONSDRDecoder.ilk  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.read.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
GnssReader/GnssReader/: ClassDiagram1.cd  GnssReader.vcxproj  GnssReader.vcxproj.filters
GnssReader/GnssReader/Debug/: CL.read.1.tlog  CL.write.1.tlog  GnssReader.lastbuildstate  GnssReader.write.1.tlog  GnssReader_manifest.rc  IONSDRDecoder.lastbuildstate  IONSDRDecoder_manifest.rc  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
GnssReader/GnssReader/Release/: CL.read.1.tlog  CL.write.1.tlog  GnssReader.lastbuildstate  cl.command.1.tlog
GnssReader/app/TestApp/: BlockAnalytics.cpp  BlockAnalytics.h  ChunkBuffer.cpp  ChunkBuffer.h  DecStream.cpp  DecStream.h  FileReader.cpp  FileReader.h  GnssReader.cpp  GnssReader.h  IBuffer.cpp  IBuffer.h  Reader.cpp  Reader.h  StreamAnalytics.cpp  StreamAnalytics.h  Test.cpp  TestApp.vcproj  TestApp.vcxproj  TestApp.vcxproj.filters  XMLtoMeta.cpp  XMLtoMeta.h  resource.h
GnssReader/app/TestAppIfenConvert/: TestAppIfenConvert.cpp  TestAppIfenConvert.sln
GnssReader/app_old/TestApp/: CMakeLists.txt  TestApp.cpp  testmetadata1.xml
GnssReader/app_old/TestAppIfenConvert/: TestAppIfenConvert.vcxproj
GnssReader/cmake/Modules/: UHDComponent.cmake
GnssReader/design/uml/: GnssMetadataApiModel.mdzip
GnssReader/include/: ChunkBuffer.h  DecStream.h  DecStream.h~  Decoder.h  FileReader.h  FileReader.h~  GnssReader.h  GnssReader.h~  IBuffer.h  IBuffer.h~  StreamAnalytics.h  Test.h  XMLtoMeta.h  XMLtoMeta.h~
GnssReader/include/GnssMetadata/: AttributedObject.h  Band.h  Block.h  Chunk.h  Cluster.h  File.h  Lane.h  Lump.h  Oscillator.h
GnssReader/lib/: CMakeLists.txt  ChunkBuffer.cpp  DecStream.cpp  DecStream.cpp~  Decoder.cpp  FileReader.cpp  FileReader.cpp~  GnssReader.cpp  GnssReader.cpp~  IBuffer.cpp  IBuffer.cpp~  StreamAnalytics.cpp  Test.cpp  Test.cpp~  XMLtoMeta.cpp  XMLtoMeta.cpp~
GnssReader/lib/GnssMetadata/: AttributedObject.cpp  CMakeLists.txt  Cluster.cpp  Duration.cpp  File.cpp  GnssMetadata.vcxproj  GnssMetadata.vcxproj.filters  Lump.cpp  Position.cpp  Session.cpp  Stream.cpp  System.cpp
GnssReader/lib/GnssMetadata/Xml/: LumpTranslator.cpp  SystemTranslator.cpp  XmlDefs.h.gch
GnssReader/tools/: Online XSLT Test Tool.url
StandardConverter/: StandardConverter.sln
StandardConverter/Debug/: StandardConverter.ilk  TRIGRDATA_56320kHz_04bit_Ch0123_2014-06-09-13-01-43-546.tgx  TRIGRDATA_56320kHz_04bit_Ch0123_2014-06-09-13-01-53-546.tgx  TRIGRDATA_56320kHz_04bit_Ch0123_2014-06-09-13-01-58-546.tgx
StandardConverter/StandardConverter/: Convert.cpp  StandardConverter.vcxproj  StandardConverter.vcxproj.filters
StandardConverter/StandardConverter/Debug/: CL.read.1.tlog  CL.write.1.tlog  (+13 more)
StandardConverterCE/Debug/: TRIGRDATA_56320kHz_04bit_Ch0123_2014-06-09-13-01-43-546.tgx  TRIGRDATA_56320kHz_04bit_Ch0123_2014-06-09-13-01-48-546.tgx
StandardConverterCE/StandardConverter/: Convert.cpp  Convert.h  ConvertConsole.cpp  StandardConverter.vcxproj  StandardConverter.vcxproj.filters
Tests/padAndShift/: lshp.xml  rshp.xml  rstp.xml
ThreadTest/: ThreadTest.sln
ThreadTest/Debug/: ThreadTest.ilk
ThreadTest/ThreadTest/: FileReader.cpp  FileReader.h  IBuffer.h  ThreadTest.vcxproj  ThreadTest.vcxproj.filters  test2.cpp
Waterfall/: QTwaterfallPlot.pro  QTwaterfallPlot.pro.user.9ec1cb1  QTwaterfallPlot.pro.user.f1775f6  README.docx  fft.h  jet.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  multiplot.cpp  multiplot.h
Waterfall/app/: fft.h  mainwindow.cpp  mainwindow.h  multiplot.cpp  multiplot.h  multiplot.ui
Waterfall/dsp/: agc_impl.h  correct_iq_cc.cpp  correct_iq_cc.h  lpf.cpp  resampler_xx.cpp  resampler_xx.h  rx_agc_xx.cpp  rx_demod_am.cpp  rx_demod_am.h  rx_demod_fm.cpp  rx_demod_fm.h  rx_fft.cpp  rx_fft.h  rx_filter.cpp  rx_meter.cpp
Waterfall/fftw/: 3232.bat  libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3l-3.exp
Waterfall/fftw_32/: libfftw3-3.exp
Waterfall/fftw_64/: libfftw3-3.lib
Waterfall/include/: CMakeLists.txt  ui_dockaudio.h
Waterfall/qtgui/: dockaudio.cpp  dockaudio.ui  dockfft.cpp  dockrxopt.cpp  meter.cpp  plotter.cpp  plotter.h
qtWaterfallPlot/: QTwaterfallPlot.pro  fft.h  jetColorMap.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  multiplot.cpp  multiplot.h  multiplot.ui
qtWaterfallPlot/app/: CMakeLists.txt
qtWaterfallPlot/fftw/: libfftw3-3.exp  libfftw3f-3.lib  libfftw3l-3.lib
qtWaterfallPlot/include/GnssMetadata/: CMakeLists.txt  Position.h  RfConfiguration.h  Source.h  Stream.h
qtWaterfallPlot/qtgui/: agc_options.cpp  dockfft.ui  meter.h  plotter.cpp  plotter.h
(+138 files in other folders)
